<resources>
    <string name="app_name">Neighborhood Security</string>
    <string name="web_client_id" translatable="false">822387448086-becf94hab3hbcq5h0irme0hij0kq6d45.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1895370760703633</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1895370760703633</string>
    <string name="eventtype_carjacking">Carjacking</string>
    <string name="eventtype_burglary">Burglary</string>
    <string name="eventtype_robbery">Robbery</string>
    <string name="eventtype_theft">Theft</string>
    <string name="eventtype_shady_people">Shady People</string>
    <string name="eventtype_scammers">Scammers</string>
    <string name="details_date">Date</string>
    <string name="details_event_type">Event type</string>
    <string name="details_description">Description</string>
    <string name="details_address">Address</string>
    <string name="details_coordinates">Coordinates</string>
    <string name="details_votes">Votes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_detail">Event Detail</string>
    <string name="event_voted">Event voted</string>
    <string name="event_voted_undo">Undo</string>
    <string name="dialog_close_button">Close</string>
    <string name="radio_address">Address</string>
    <string name="radio_coordinates">Coordinates</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="reset_password">Reset password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register_now">Not a member? Register now!</string>
    <string name="title_authentication">Authentication</string>
    <string name="button_email_auth">Login with Email</string>
    <string name="title_activity_event_list">Event list</string>
    <string name="hint_event_type">Event type</string>
    <string name="hint_description">Description</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_street">Street</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_address">Address</string>
    <string name="single_vote">1 vote</string>
    <string name="multiple_vote">%1$d votes</string>
    <string name="action_create_event">Create event</string>
    <string name="title_activity_event_create">Create event</string>
    <string name="title_activity_subscription_create">Create subscription</string>
    <string name="title_activity_subscription_list">Subscription list</string>
    <string name="metres_singular">%1$d metre</string>
    <string name="metres_plural">%1$d metres</string>
    <string name="radius">Radius:</string>
    <string name="action_create_subscription">Create subscription</string>
    <string name="login_required_toast">You need an account to access this functionality!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="map_button">Map</string>
    <string name="subscription_button">Subscriptions</string>
    <string name="msg_network_problem_events_upd">There might be some network problems, we couldn\'t download event updates. Try again later.</string>
    <string name="msg_network_problem_event_create">There might be some network problems, we couldn\'t create the event. Try again later.</string>
    <string name="msg_success_event_create">Event created</string>
    <string name="msg_400_bad_request_events">There\'s a problem with your request. Please check if every required field has been filled.</string>
    <string name="msg_404_not_found_user_events">You are not logged in or your account isn\'t registered on our remote server. Try to reauthenticate.</string>
    <string name="msg_500_internal_server_error_events">An error has occurred on our remote server. Try again later. Contact us if the problem persists.</string>
    <string name="msg_network_problem_subscriptions_upd">There might be some network problems, we couldn\'t download subscription updates. Try again later.</string>
    <string name="msg_network_problem_subscription_create">There might be some network problems, we couldn\'t create the subscription. Try again later.</string>
    <string name="msg_success_subscription_create">Subscription created</string>
    <string name="msg_400_bad_request_subs">There\'s a problem with your request. Please check if every required field has been filled.</string>
    <string name="msg_401_unauthorized_subs">You need to be logged in to use this feature. Do it now, it\'s free!</string>
    <string name="msg_404_not_found_user_subs">You are not logged in or your account isn\'t registered on our remote server. Try to reauthenticate.</string>
    <string name="msg_500_internal_server_error_subs">An error has occurred on our remote server. Try again later. Contact us if the problem persists.</string>
    <string name="msg_network_problem_event_vote">There might be some network problems, we couldn\'t submit your vote. Try again later.</string>
    <string name="msg_204_no_content_event_vote">You have already voted this event!</string>
    <string name="msg_400_bad_request_event_vote">There\'s a problem with your request.</string>
    <string name="msg_401_unauthorized_event_vote">You need to be logged in to use this feature. Do it now, it\'s free!</string>
    <string name="msg_404_not_found_event_vote">There\'s a problem with your request. Event might have been deleted.</string>
    <string name="msg_500_internal_server_error_event_vote">An error has occurred on our remote server. Try again later. Contact us if the problem persists.</string>
    <string name="msg_network_problem_event_unvote">There might be some network problems, we couldn\'t delete your vote. Try again later.</string>
    <string name="msg_204_no_content_event_unvote">You have already removed your vote!</string>
    <string name="msg_success_login">Logged in.</string>
    <string name="msg_problem_login">Login error. Please check your credentials or you might have network problems.</string>
    <string name="msg_success_register">Registered successfully.</string>
    <string name="msg_problem_register">Registration error. Email is already in use or you might have network problems.</string>
    <string name="msg_success_resetpassword">Email sent, please check your inbox!</string>
    <string name="msg_problem_resetpassword">Reset password encountered an error. Email is not registered or you might have network problems.</string>
    <string name="msg_unknown_error">An unknown error has occurred. Try again later. Contact us if the problem persists.</string>
    <string name="msg_insert_valid_email">Email must be valid.</string>
    <string name="msg_insert_valid_password">Password must be at least 6 characters long.</string>
    <string name="msg_insert_valid_username">Username cannot be empty.</string>
    <string name="msg_insert_valid_description">Insert a short description of the event</string>
    <string name="msg_insert_valid_latitude">Insert a valid latitude, between -90 and +90</string>
    <string name="msg_insert_valid_longitude">Insert a valid longitude, between -180 and +180</string>
    <string name="msg_insert_valid_address">Address</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="event_summary">Event summary</string>
    <string name="subscription_summary">Subscription summary</string>
    <string name="help">Help</string>
    <string name="event_summary_text">You have seen %1$d events during the use of the application</string>
    <string name="subscription_summary_text">You are subscribed to %1$d locations and have received %2$d notifications about them.</string>
    <string name="subscription_summary_error">To see these statistics you need to have an account!</string>
    <string name="progress_event_title">Publishing the event</string>
    <string name="progress_event_message">Please wait</string>
    <string name="progress_subscription_title">Publishing the subscription</string>
    <string name="progress_subscription_message">Please wait</string>
    <string name="msg_insert_valid_radius">Select a valid radius, between 0 and 2000</string>
    <string name="msg_insert_valid_place">Select a place, before creating the subscription</string>
    <string name="progress_fb_title">Authenticating using Facebook</string>
    <string name="progress_fb_message">Please wait</string>
    <string name="action_search">Search</string>
    <string name="title_event_list_location">Events in %1$s</string>
    <string name="title_event_list_generic">Event list</string>
    <string name="title_event_list_subscription">Events in subscription</string>
    <string name="title_event_list_uid">Your events</string>
    <string name="msg_no_event_to_show">No events to show here :)</string>
    <string name="msg_no_subs_to_show">No subscription to show, why don\'t you create one?</string>
    <string name="help_ns">Neighborhood Security allows you to publish crime events and subscribe to notifications about specific areas. As soon as another user posts an event you might be interested in, we will notify you!</string>
    <string name="drawer_login_register">Login / Register</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_new_event">New Event</string>
    <string name="drawer_new_subscription">New Subscription</string>
    <string name="drawer_my_events">My Events</string>
    <string name="drawer_logout_ok">Successfully logged out</string>
    <string name="drawer_logout_fail">Failed to logout</string>
    <string name="title_activity_map">Event map</string>
    <string name="delete_event_title">Delete event?</string>
    <string name="delete_event_message">Do you want to delete this event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_delete_event">Delete event</string>
    <string name="msg_400_bad_request_delete_event">There was a problem with your request. Please try again later</string>
    <string name="msg_401_unauthorized_delete_event">You are not authorized to delete this event, are you the owner?</string>
    <string name="msg_404_not_found_delete_event">This event no longer exists</string>
    <string name="msg_500_internal_server_error_delete_event">Something went wrong on our server. Please try again later</string>
    <string name="msg_400_bad_request_delete_subscription">There was a problem with your request. Please try again later</string>
    <string name="msg_401_unauthorized_delete_subscription">You are not authorized to delete this subscription, are you the owner?</string>
    <string name="msg_404_not_found_delete_subscription">This subscription no longer exists</string>
    <string name="msg_500_internal_server_error_delete_subscription">Something went wrong on our server. Please try again later</string>
    <string name="msg_event_deleted">Event deleted</string>
    <string name="msg_subscription_deleted">Subscription deleted</string>
    <string name="action_delete_subscription">Delete subscription</string>
    <string name="action_new_event">New event</string>
</resources>