<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.moscowmuleaddicted.neighborhoodsecurity.fragment.EmailPasswordFragment">

    <LinearLayout
        android:id="@+id/ep_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/marmotta" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ep_fields_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ep_buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="2"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/ep_signin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signin"
            style="?attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/ep_signup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signup"
            android:visibility="gone"
            style="?attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/ep_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/reset_password"
            android:visibility="gone"
            style="?attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/ep_forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/ep_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:gravity="center_horizontal"/>


    </LinearLayout>


</LinearLayout>
