<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ls="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        tools:context="com.moscowmuleaddicted.neighborhoodsecurity.fragment.EventCreateFragment">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/descriptionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="8dp"
                android:src="@drawable/comment_alert_outline" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/descriptionIcon"
                ls:errorEnabled="true"
                ls:counterEnabled="true"
                ls:counterMaxLength="400">

                <EditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/eventTypeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="8dp"
                android:src="@drawable/alert_outline" />

            <com.satsuware.usefulviews.LabelledSpinner
                android:id="@+id/labelled_spinner_event_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/eventTypeIcon"
                ls:labelText="@string/hint_event_type"
                ls:widgetColor="@color/colorAccent" />

        </RelativeLayout>

        <RadioGroup
            android:id="@+id/radioGroupEventCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:text="@string/radio_address" />

            <RadioButton
                android:id="@+id/radioCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:text="@string/radio_coordinates" />

        </RadioGroup>


        <LinearLayout
            android:id="@+id/layout_address_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--<ImageView-->
                    <!--android:id="@+id/countryIcon"-->
                    <!--android:visibility="gone"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:paddingRight="8dp"-->
                    <!--android:src="@drawable/ic_map" />-->

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
                    />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_coordinates_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/coordsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="8dp"
                android:src="@drawable/ic_map" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/coordsIcon"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    ls:errorEnabled="true">

                    <EditText
                        android:id="@+id/input_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_latitude"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    ls:errorEnabled="true">

                    <EditText
                        android:id="@+id/input_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_longitude"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>
</ScrollView>