<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        tools:context="com.moscowmuleaddicted.neighborhoodsecurity.fragment.SubscriptionCreateFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/seekbar_title_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seekbar_title_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius" />

                <TextView
                    android:id="@+id/seekbar_title_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="" />

            </LinearLayout>


            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/seekbar_radius"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/seekbar_title_container"
                android:layout_gravity="center_horizontal"
                android:max="2000"
                android:progress="1" />

            <TextView
                android:id="@+id/seekbar_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar_radius"
                android:text="0" />

            <TextView
                android:id="@+id/seekbar_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/seekbar_radius"
                android:text="2000" />


        </RelativeLayout>


        <RadioGroup
            android:id="@+id/radio_group_subscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_address_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:paddingRight="8dp"
                android:text="@string/radio_address" />

            <RadioButton
                android:id="@+id/radio_coordinates_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:text="@string/radio_coordinates" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_address_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <fragment
                        android:id="@+id/place_autocomplete_fragment"
                        android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5" />

                    <ImageView
                        android:id="@+id/subscription_get_position"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_gps_fixed"
                        android:tint="@color/md_black_1000" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_coordinates_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/icon_coords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="8dp"
                android:src="@drawable/ic_map" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_coords"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/input_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_latitude"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/input_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_longitude"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>
</ScrollView>